# blackmagic-opencv-test

./: .gitignore  CMakeLists.txt  README.md  install.sh
CMakeModules/: FindDeckLink.cmake
src/: BstrCompat.h  CCoInitializer.cpp  CCoInitializer.h  ComPtr.h  DeckLinkCapture.cpp  DeckLinkCapture.h  DeckLinkCreateInstance.cpp  DeckLinkCreateInstance.h  DeckLinkInputCallback.cpp  DeckLinkInputCallback.h  DeckLinkOpenCv.cpp  main.cpp
